change e-commerce data for illustration data, fixed image cover

--- a/index.html
+++ b/index.html
@@ -4725,7 +4725,7 @@
 
                 <div class="grid_container">
                     <div class="cards_service_container">
-                        <article class="card service_card graphic_design_service_card card_up">
+                        <article class="card service_card card_up">
                             <div class="bg_card graphic_design_service_bg">
                                 <img src="https://images.pexels.com/photos/1601773/pexels-photo-1601773.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=1260&amp;h=750&amp;dpr=1" loading="lazy" />
                             </div>
@@ -4741,34 +4741,23 @@
                                 </p>
                             </div>
                         </article>
-                        <article class="card service_card web_service_card card_up">
-                            <div class="bg_card web_service_bg">
-                                <img src="https://images.pexels.com/photos/285814/pexels-photo-285814.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=1260&amp;h=750&amp;dpr=1" loading="lazy" />
+                        <article class="card service_card card_up">
+                            <div class="bg_card">
+                                <img src="https://images.pexels.com/photos/16516/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" loading="lazy" />
                             </div>
                             <div class="info_card">
-                                <h2 class="project-tile" data-change data-es="Desarrollo Front-End" data-en="Front-End Devlopment">Desarrollo Front-End</h2>
-                                <p class="info" data-change data-es="Dentro del desarrollo de programación, darle estilo y formato a las ideas es algo que me apaciona." data-en="Within programming development, giving style and format to ideas is something that excites me.">
-                                    Dentro del desarrollo de programación, darle estilo y formato a las ideas es algo que me apaciona.
-                                </p>
-                            </div>
-                        </article>
-                        <article class="card service_card e_commers_service_card card_up">
-                            <div class="bg_card e-commerce_service_bg">
-                                <img src="https://images.pexels.com/photos/7620629/pexels-photo-7620629.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=1260&amp;h=750&amp;dpr=1" class="not" loading="lazy" />
-                            </div>
-                            <div class="info_card">
-                                <h2 class="project-tile">E-Commerce</h2>
+                                <h2 class="project-tile" data-change data-es="Ilustración" data-en="Illustration">Ilustración</h2>
                                 <p
                                     class="info"
                                     data-change
-                                    data-es="Si tu negocio tiene venta de productos, una gran herramienta seria una tienda en linea, puedo realizarte una tienda diseñada a tu gusto usando las mejores tecnologias."
-                                    data-en="If your business sells products, a great tool would be an online store. I can create a store designed to your liking using the best technologies."
+                                    data-es="Transformo tus ideas en ilustraciones únicas y personalizadas. Desde conceptos abstractos hasta diseños detallados."
+                                    data-en="I transform your ideas into unique and personalized illustrations. From abstract concepts to detailed designs."
                                 >
-                                    Si tu negocio tiene venta de productos, una gran herramienta seria una tienda en linea, puedo realizarte una tienda diseñada a tu gusto usando las mejores tecnologias.
+                                    Transformo tus ideas en ilustraciones únicas y personalizadas. Desde conceptos abstractos hasta diseños detallados.
                                 </p>
                             </div>
                         </article>
-                        <article class="card service_card UX_UI_service_card card_up">
+                        <article class="card service_card card_up">
                             <div class="bg_card UX-UI_service_bg">
                                 <img src="https://images.pexels.com/photos/196645/pexels-photo-196645.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=1260&amp;h=750&amp;dpr=1" loading="lazy" />
                             </div>
@@ -4781,6 +4770,17 @@
                                     data-en="Creating a website is important, just as it is important to give the user a good experience, ease of use, and for your content to be better seen by your clients."
                                 >
                                     La creación de pagina web es importante, asi como es importante darle al usuario una buena experiencia, facilidad de uso, y que tu contenido sea mejor visto por tus clientes.
+                                </p>
+                            </div>
+                        </article>
+                        <article class="card service_card card_up">
+                            <div class="bg_card">
+                                <img src="https://images.pexels.com/photos/285814/pexels-photo-285814.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=1260&amp;h=750&amp;dpr=1" loading="lazy" />
+                            </div>
+                            <div class="info_card">
+                                <h2 class="project-tile" data-change data-es="Desarrollo Front-End" data-en="Front-End Devlopment">Desarrollo Front-End</h2>
+                                <p class="info" data-change data-es="Dentro del desarrollo de programación, darle estilo y formato a las ideas es algo que me apaciona." data-en="Within programming development, giving style and format to ideas is something that excites me.">
+                                    Dentro del desarrollo de programación, darle estilo y formato a las ideas es algo que me apaciona.
                                 </p>
                             </div>
                         </article>
