adding sound to page, changing ancher tag for button, adding windows to location action to those btns

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+
+        <!-- ! ACCESIBILITE BUTTONS - START -->
+        <button type="button" class="accessibility_btn" aria-label="Skip to main content - Salta a contenido principal" name="services_section"><span class="label_btn" data-change data-es="Saltar A Contenido Principal" data-en="Go To Main">Saltar A Contenido Principal</span></button>
+        <button type="button" class="accessibility_btn" aria-label="Skip to footer - Salta al pie de pagina" name="legals_section"><span class="label_btn" data-change data-es="Saltar al pie de pagina" data-en="Go To Footer">Saltar al pie de pagina</span></button>
+
         <div class="bubble info_bubble">
             <h3 class="title" data-change></h3>
             <p class="description" data-change></p>
@@ -45,7 +50,7 @@
                 <h3 class="name">Jonathan Grajeda</h3>
                 <p class="place" data-change data-es="México CDMX" data-en="Mexico City">México CDMX</p>
                 <div class="icons_container">
-                    <a href="https://www.behance.net/jg_john_design" class="icon_container animated_social_btn">
+                    <button type="button" class="icon_container animated_social_btn href_btn" data-href="https://www.behance.net/jg_john_design">
                         <svg class="icon_svg social_icon_svg behance_icon_svg" data-name="behance_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                             <title>Behance</title>
                             <path
@@ -53,8 +58,8 @@
                                 d="M10.1,11.63a2.44,2.44,0,0,1,2.12,1,3.78,3.78,0,0,1,.78,2v1A5.31,5.31,0,0,1,12.5,18a3.35,3.35,0,0,1-1.25,1.45,6.41,6.41,0,0,1-1.47.68,6.32,6.32,0,0,1-1.23.27H0V4.28H8.05a4.52,4.52,0,0,1,3.17,1.1,4,4,0,0,1,1.23,3.19,3.28,3.28,0,0,1-.58,2,2.16,2.16,0,0,1-1.18.92l-.59.11M3.55,7.13v3.6H7.8a1.32,1.32,0,0,0,1-.38,2.35,2.35,0,0,0,.35-1.52,2.19,2.19,0,0,0-.27-1.18.94.94,0,0,0-.58-.47l-.25,0H3.55m4.3,10.39c1.23,0,1.85-.69,1.85-2.1a2.54,2.54,0,0,0-.4-1.54,1.27,1.27,0,0,0-.8-.6l-.45,0H3.55v4.29h4.3M19.54,8.38a5.63,5.63,0,0,1,2.95.72,4,4,0,0,1,1.67,1.75,8.65,8.65,0,0,1,.68,2.05A7,7,0,0,1,25,14.62l0,.76h-8a2.86,2.86,0,0,0,.68,2,1.93,1.93,0,0,0,1.37.7l.65,0a3.13,3.13,0,0,0,1.77-.42,1.3,1.3,0,0,0,.67-.83l.05-.45h2.7a3.75,3.75,0,0,1-1.32,3.11,4.55,4.55,0,0,1-2.62,1.09l-1.35,0a6.85,6.85,0,0,1-3.05-.62,4.14,4.14,0,0,1-1.79-1.55,8.67,8.67,0,0,1-.83-1.83,5.36,5.36,0,0,1-.27-1.5v-.64c0-.17,0-.4,0-.68A7.92,7.92,0,0,1,14,12.4a6.37,6.37,0,0,1,.9-1.87,5.32,5.32,0,0,1,1.8-1.48,5.85,5.85,0,0,1,2.87-.67M22,13.22c0-.07,0-.15,0-.27s-.07-.32-.15-.6a3.21,3.21,0,0,0-.33-.75,1.78,1.78,0,0,0-.7-.6,2.28,2.28,0,0,0-1.15-.28,2.5,2.5,0,0,0-1.74.63,2.42,2.42,0,0,0-.85,1.27l-.16.6H22m.65-8V7.18h-6.4V5.23h6.4"
                             />
                         </svg>
-                    </a>
-                    <a href="https://github.com/JohnMcKrazy" class="icon_container animated_social_btn">
+                    </button>
+                    <button type="button" class="icon_container animated_social_btn href_btn" data-href="https://github.com/JohnMcKrazy">
                         <svg class="icon_svg social_icon_svg gitHub_icon_svg" data-name="gitHub_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                             <title>GitHub</title>
                             <path
@@ -69,8 +74,8 @@
                             <path class="cls-2" d="M8.36,20.71c0,.11-.11.19-.26.2s-.27-.08-.27-.19.11-.19.26-.19.27.08.27.18Zm0,0" />
                             <path class="cls-2" d="M9.32,20.55c0,.1-.09.21-.24.23s-.28,0-.3-.13.09-.21.24-.23.28,0,.3.13Zm0,0" />
                         </svg>
-                    </a>
-                    <a href="https://api.whatsapp.com/send?phone=525614207862&text=Necesito informacion sobre tus servicios" class="icon_container animated_social_btn">
+                    </button>
+                    <button type="button" class="icon_container animated_social_btn href_btn" data-href="https://api.whatsapp.com/send?phone=525614207862&text=Necesito informacion sobre tus servicios">
                         <svg class="icon_svg social_icon_svg wa_icon_svg" data-name="wa_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
                             <title>WhatsApp</title>
                             <path
@@ -78,7 +83,7 @@
                                 d="M7.253 18.494l.724.423A7.953 7.953 0 0 0 12 20a8 8 0 1 0-8-8c0 1.436.377 2.813 1.084 4.024l.422.724-.653 2.401 2.4-.655zM2.004 22l1.352-4.968A9.954 9.954 0 0 1 2 12C2 6.477 6.477 2 12 2s10 4.477 10 10-4.477 10-10 10a9.954 9.954 0 0 1-5.03-1.355L2.004 22zM8.391 7.308c.134-.01.269-.01.403-.004.054.004.108.01.162.016.159.018.334.115.393.249.298.676.588 1.357.868 2.04.062.152.025.347-.093.537a4.38 4.38 0 0 1-.263.372c-.113.145-.356.411-.356.411s-.099.118-.061.265c.014.056.06.137.102.205l.059.095c.256.427.6.86 1.02 1.268.12.116.237.235.363.346.468.413.998.75 1.57 1l.005.002c.085.037.128.057.252.11.062.026.126.049.191.066a.35.35 0 0 0 .367-.13c.724-.877.79-.934.796-.934v.002a.482.482 0 0 1 .378-.127c.06.004.121.015.177.04.531.243 1.4.622 1.4.622l.582.261c.098.047.187.158.19.265.004.067.01.175-.013.373-.032.259-.11.57-.188.733a1.155 1.155 0 0 1-.21.302 2.378 2.378 0 0 1-.33.288 3.71 3.71 0 0 1-.125.09 5.024 5.024 0 0 1-.383.22 1.99 1.99 0 0 1-.833.23c-.185.01-.37.024-.556.014-.008 0-.568-.087-.568-.087a9.448 9.448 0 0 1-3.84-2.046c-.226-.199-.435-.413-.649-.626-.89-.885-1.562-1.84-1.97-2.742A3.47 3.47 0 0 1 6.9 9.62a2.729 2.729 0 0 1 .564-1.68c.073-.094.142-.192.261-.305.127-.12.207-.184.294-.228a.961.961 0 0 1 .371-.1z"
                             />
                         </svg>
-                    </a>
+                    </button>
                 </div>
             </div>
         </div>
@@ -90,10 +95,6 @@
                 <p class="place" data-change data-es="México CDMX" data-en="Mexico City">México CDMX</p>
             </div>
         </div>
-        <!-- ! ACCESIBILITE BUTTONS - START -->
-        <button type="button" class="accessibility_btn" aria-label="Skip to main content - Salta a contenido principal" name="services_section"><span class="label_btn" data-change data-es="Saltar A Contenido Principal" data-en="Go To Main">Saltar A Contenido Principal</span></button>
-        <button type="button" class="accessibility_btn" aria-label="Skip to footer - Salta al pie de pagina" name="legals_section"><span class="label_btn" data-change data-es="Saltar al pie de pagina" data-en="Go To Footer">Saltar al pie de pagina</span></button>
-
         <!-- !MODAL -->
         <div class="modal">
             <div class="modal_window alert_modal" id="alert_modal">
@@ -300,7 +301,7 @@
         </div>
         <div class="menu_controler phone_menu_controler">
             <div class="social_btns_container nav_menu_social_btns">
-                <a href="https://www.behance.net/jg_john_design" class="phone_social_btn phone_menu_btn action_menu extra_btn">
+                <button type="button" class="phone_social_btn phone_menu_btn action_menu extra_btn href_btn" data-href="https://www.behance.net/jg_john_design">
                     <div class="icon_container">
                         <svg class="social_icon_svg behance_icon_svg icon_svg" data-name="behance_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                             <title>Behance</title>
@@ -310,8 +311,8 @@
                             />
                         </svg>
                     </div>
-                </a>
-                <a href="https://github.com/JohnMcKrazy" class="phone_social_btn phone_menu_btn action_menu extra_btn">
+                </button>
+                <button type="button" class="phone_social_btn phone_menu_btn action_menu extra_btn href_btn" data-href="https://github.com/JohnMcKrazy">
                     <div class="icon_container">
                         <svg class="social_icon_svg gitHub_icon_svg icon_svg" data-name="gitHub_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                             <title>GitHub</title>
@@ -328,8 +329,8 @@
                             <path class="cls-2" d="M9.32,20.55c0,.1-.09.21-.24.23s-.28,0-.3-.13.09-.21.24-.23.28,0,.3.13Zm0,0" />
                         </svg>
                     </div>
-                </a>
-                <a href="https://api.whatsapp.com/send?phone=525614207862&text=Necesito informacion sobre tus servicios" class="phone_social_btn phone_menu_btn extra_btn">
+                </button>
+                <button type="button" class="phone_social_btn phone_menu_btn action_menu extra_btn href_btn" data-href="https://api.whatsapp.com/send?phone=525614207862&text=Necesito informacion sobre tus servicios">
                     <div class="icon_container">
                         <svg class="social_icon_svg wa_icon_svg icon_svg" data-name="wa_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                             <title>WhatsApp</title>
@@ -340,7 +341,7 @@
                             <path class="cls-1" d="M13,.48A12,12,0,0,0,2.28,18L0,24.5l6.63-1.81A12,12,0,1,0,13,.48Zm0,22.43A10.41,10.41,0,1,1,23.39,12.5,10.41,10.41,0,0,1,13,22.91Z" />
                         </svg>
                     </div>
-                </a>
+                </button>
                 <button class="phone_social_btn contact_btn phone_menu_btn action_menu extra_btn" tabindex="0">
                     <div class="icon_container">
                         <svg class="social_icon_svg contact_icon_svg icon_svg" data-name="contact_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 18">
@@ -413,7 +414,7 @@
             </button>
 
             <div class="menu_social_btns_container">
-                <a href="https://www.behance.net/jg_john_design" class="social_menu_btn social_btn">
+                <button type="button" class="social_menu_btn social_btn href_btn" data-href="https://www.behance.net/jg_john_design">
                     <div class="icon_container">
                         <svg class="icon_svg social_icon_svg behance_icon_svg" data-name="behance_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                             <title>Behance</title>
@@ -423,8 +424,8 @@
                             />
                         </svg>
                     </div>
-                </a>
-                <a href="https://github.com/JohnMcKrazy" class="social_menu_btn social_btn">
+                </button>
+                <button type="button" class="social_menu_btn social_btn href_btn" data-href="https://github.com/JohnMcKrazy">
                     <div class="icon_container">
                         <svg class="icon_svg social_icon_svg gitHub_icon_svg" data-name="gitHub_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                             <title>GitHub</title>
@@ -441,8 +442,8 @@
                             <path class="cls-2" d="M9.32,20.55c0,.1-.09.21-.24.23s-.28,0-.3-.13.09-.21.24-.23.28,0,.3.13Zm0,0" />
                         </svg>
                     </div>
-                </a>
-                <a href="https://api.whatsapp.com/send?phone=525614207862&text=Necesito informacion sobre tus servicios" class="social_menu_btn social_btn">
+                </button>
+                <button type="button" class="social_menu_btn social_btn href_btn" data-href="https://api.whatsapp.com/send?phone=525614207862&text=Necesito informacion sobre tus servicios">
                     <div class="icon_container">
                         <svg class="icon_svg social_icon_svg wa_icon_svg" data-name="wa_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
                             <title>WhatsApp</title>
@@ -452,7 +453,7 @@
                             />
                         </svg>
                     </div>
-                </a>
+                </button>
                 <button type="button" class="social_menu_btn contact_btn social_btn" tabindex="0">
                     <div class="icon_container">
                         <svg class="icon_svg social_icon_svg contact_icon_svg" data-name="contact_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 18">
@@ -4893,8 +4894,8 @@
                         <p class="form_response"></p>
                     </div>
                 </form>
-                <a href="https://api.whatsapp.com/send?phone=525614207862&text=Necesito informacion sobre tus servicios" class="btn whatsapp_btn animated_social_btn">
-                    <h3>WhatsApp</h3>
+                <button type="button" class="btn whatsapp_btn animated_social_btn href_btn" data-href="https://api.whatsapp.com/send?phone=525614207862&text=Necesito informacion sobre tus servicios">
+                    <span class="label_btn">WhatsApp</span>
                     <span class="icon_container">
                         <svg class="icon_svg social_icon_svg wa_icon_svg" data-name="wa_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
                             <title>WhatsApp</title>
@@ -4904,7 +4905,7 @@
                             />
                         </svg>
                     </span>
-                </a>
+                </button>
             </div>
         </section>
 
@@ -4924,7 +4925,7 @@
                     </div>
                 </div>
                 <div class="social_btns_container">
-                    <a href="https://www.behance.net/jg_john_design" class="icon_container animated_social_btn">
+                    <button type="button" class="icon_container animated_social_btn href_btn" data-href="https://www.behance.net/jg_john_design">
                         <svg class="icon_svg social_icon_svg behance_icon_svg" data-name="behance_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                             <title>Behance</title>
                             <path
@@ -4932,8 +4933,8 @@
                                 d="M10.1,11.63a2.44,2.44,0,0,1,2.12,1,3.78,3.78,0,0,1,.78,2v1A5.31,5.31,0,0,1,12.5,18a3.35,3.35,0,0,1-1.25,1.45,6.41,6.41,0,0,1-1.47.68,6.32,6.32,0,0,1-1.23.27H0V4.28H8.05a4.52,4.52,0,0,1,3.17,1.1,4,4,0,0,1,1.23,3.19,3.28,3.28,0,0,1-.58,2,2.16,2.16,0,0,1-1.18.92l-.59.11M3.55,7.13v3.6H7.8a1.32,1.32,0,0,0,1-.38,2.35,2.35,0,0,0,.35-1.52,2.19,2.19,0,0,0-.27-1.18.94.94,0,0,0-.58-.47l-.25,0H3.55m4.3,10.39c1.23,0,1.85-.69,1.85-2.1a2.54,2.54,0,0,0-.4-1.54,1.27,1.27,0,0,0-.8-.6l-.45,0H3.55v4.29h4.3M19.54,8.38a5.63,5.63,0,0,1,2.95.72,4,4,0,0,1,1.67,1.75,8.65,8.65,0,0,1,.68,2.05A7,7,0,0,1,25,14.62l0,.76h-8a2.86,2.86,0,0,0,.68,2,1.93,1.93,0,0,0,1.37.7l.65,0a3.13,3.13,0,0,0,1.77-.42,1.3,1.3,0,0,0,.67-.83l.05-.45h2.7a3.75,3.75,0,0,1-1.32,3.11,4.55,4.55,0,0,1-2.62,1.09l-1.35,0a6.85,6.85,0,0,1-3.05-.62,4.14,4.14,0,0,1-1.79-1.55,8.67,8.67,0,0,1-.83-1.83,5.36,5.36,0,0,1-.27-1.5v-.64c0-.17,0-.4,0-.68A7.92,7.92,0,0,1,14,12.4a6.37,6.37,0,0,1,.9-1.87,5.32,5.32,0,0,1,1.8-1.48,5.85,5.85,0,0,1,2.87-.67M22,13.22c0-.07,0-.15,0-.27s-.07-.32-.15-.6a3.21,3.21,0,0,0-.33-.75,1.78,1.78,0,0,0-.7-.6,2.28,2.28,0,0,0-1.15-.28,2.5,2.5,0,0,0-1.74.63,2.42,2.42,0,0,0-.85,1.27l-.16.6H22m.65-8V7.18h-6.4V5.23h6.4"
                             />
                         </svg>
-                    </a>
-                    <a href="https://github.com/JohnMcKrazy" class="icon_container animated_social_btn">
+                    </button>
+                    <button type="button" class="icon_container animated_social_btn href_btn" data-href="https://github.com/JohnMcKrazy">
                         <svg class="icon_svg social_icon_svg gitHub_icon_svg" data-name="gitHub_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
                             <title>GitHub</title>
                             <path
@@ -4948,10 +4949,12 @@
                             <path class="cls-2" d="M8.36,20.71c0,.11-.11.19-.26.2s-.27-.08-.27-.19.11-.19.26-.19.27.08.27.18Zm0,0" />
                             <path class="cls-2" d="M9.32,20.55c0,.1-.09.21-.24.23s-.28,0-.3-.13.09-.21.24-.23.28,0,.3.13Zm0,0" />
                         </svg>
-                    </a>
+                    </button>
                 </div>
             </div>
         </footer>
+        <audio src="./src/audio/btn_enter.wav" data-audio="enter">Your browser doesn't support the audio tag. Please update your browser.</audio>
+        <audio src="./src/audio/btn_teleport.wav" data-audio="teleport">Your browser doesn't support the audio tag. Please update your browser.</audio>
     </body>
     <!--^^TEAMPLATES-->
     <template class="card_project_template">
@@ -4961,7 +4964,9 @@
                 <h2 class="title" data-change></h2>
                 <h3 class="subtitle" data-change data-es="Realizado Con:" data-en="Made With:"></h3>
                 <div class="icons_project_container"></div>
-                <a href="" class="more_btn btn" tabindex="-1" data-link="" target="_blank" data-change data-es="Ir a" data-en="Go To">Ir A</a>
+                <button type="button" class="more_btn btn href_btn" tabindex="-1" data-href="">
+                    <span class="label_btn" data-change data-es="Ir a" data-en="Go To">Ir a</span>
+                </button>
             </div>
         </div>
     </template>
@@ -4977,9 +4982,9 @@
                 <img class="badge_image" src="" alt="" loading="lazy" />
                 <h3 class="badge_name" data-change data-es="" data-en=""></h3>
             </div>
-            <a class="btn" href="https://www.freecodecamp.org/certification/JohnGC/responsive-web-design" aria-label="">
+            <button type="button" class="btn href_btn" data-href="https://www.freecodecamp.org/certification/JohnGC/responsive-web-design">
                 <span class="label_btn" data-change data-es="Ir a" data-en="Go To">Ir A</span>
-            </a>
+            </button>
         </div>
     </template>
     <template class="skill_badge_template">
