certifications container change by card_container, adding sound effects to btns, change certification width for new fit

--- a/index.html
+++ b/index.html
@@ -4717,7 +4717,7 @@
                     <div class="icons_container swipe_animation_container_half" data-ref="dev"></div>
                 </div>
                 <h2 class="subtitle_section" data-change data-es="Certificaciones" data-en="Certifications">Certificaciones</h2>
-                <div class="icons_container certification_container swipe_animation_container_half"></div>
+                <div class="cards_container certification_container swipe_animation_container_half"></div>
             </div>
         </section>
         <div class="section_divider">
