audio and lang adding to check user config storage

--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
                 </div>
                 <figcaption class="author_container">
                     <span class="author"><i>Albert Einstein</i></span>
-                    <span class="author_info" data-change data-es="Premio novel de física" data-en="Nobel Prize in Physics"></span>
+                    <span class="author_info" data-change data-es="Premio novel de física" data-en="Nobel prize in physics"></span>
                 </figcaption>
             </figure>
         </div>
@@ -720,7 +720,6 @@
                         <span data-change data-es=", me gusta hacer proyectos originales y unicos." data-en=", I like to do original and unique projects">, ya que me gustan los proyectos interactivos y diferentes.</span>
                     </p>
                 </div>
-
                 <div class="swipe_animation_illustration desk_icon_container">
                     <!-- ! DESK ICON START -->
                     <svg class="deskwork_icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000">
@@ -4686,7 +4685,7 @@
                             </svg>
                         </span>
                     </span>
-                    <q class="quote" data-change data-es="Nunca trato de probar nada a nadie, Quiero probarme algo a mi mismo" data-en="I never try to prove anything to anyone, I want to prove something to myself."></q>
+                    <q class="quote" data-change data-es="Nunca trato de probar nada a nadie, quiero probarme algo a mi mismo" data-en="I never try to prove anything to anyone, I want to prove something to myself."></q>
                     <span class="quote_icon quote_end">
                         <span class="icon_container">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -4697,7 +4696,7 @@
                 </div>
                 <figcaption class="author_container">
                     <span class="author"><i>Kobe Bryant</i></span>
-                    <span class="author_info" data-change data-es="Ex Campeon De La NBA" data-en="NBA former champion">Ex Campeon De La NBA</span>
+                    <span class="author_info" data-change data-es="Ex campeón de la NBA" data-en="NBA former champion">Ex campeón de la NBA</span>
                 </figcaption>
             </figure>
         </div>
@@ -4743,7 +4742,7 @@
                 </div>
                 <figcaption class="author_container">
                     <span class="author"><i>Kobe Bryant</i></span>
-                    <span class="author_info" data-change data-es="Ex Campeon De La NBA" data-en="NBA former champion">Ex Campeon De La NBA</span>
+                    <span class="author_info" data-change data-es="Ex campeón de la NBA" data-en="NBA former champion">Ex campeón de la NBA</span>
                 </figcaption>
             </figure>
         </div>
@@ -4881,7 +4880,7 @@
                 </div>
                 <figcaption class="author_container">
                     <span class="author"><i>Louis Srygley</i></span>
-                    <span class="author_info" data-change data-es="Arquitecto de Software" data-en="Software Architect"> Arquitecto de Software </span>
+                    <span class="author_info" data-change data-es="Arquitecto de software" data-en="Software architect"> Arquitecto de software </span>
                 </figcaption>
             </figure>
         </div>
